// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CheckboxGroup > renders with ariaLabel correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative" aria-label="Aria label">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with as correctly 1`] = `
"<section tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</section>"
`;

exports[`CheckboxGroup > renders with class correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="absolute">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with defaultValue correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring-inset focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4 ring-2 ring-(--ui-primary) bg-(--ui-primary)" id="v-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-reka-collection-item=""><span data-state="checked" style="pointer-events: none;" class="flex items-center justify-center size-full rounded-(--ui-radius) after:bg-(--ui-bg) after:size-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="shrink-0 size-full" width="1em" height="1em" viewBox="0 0 16 16"></svg></span>
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with description correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <p class="text-(--ui-text-muted)">Description 0</p>
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <p class="text-(--ui-text-muted)">Description 1</p>
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <p class="text-(--ui-text-muted)">Description 2</p>
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with description slot correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with descriptionKey correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <p class="text-(--ui-text-muted)">1</p>
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <p class="text-(--ui-text-muted)">2</p>
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <p class="text-(--ui-text-muted)">3</p>
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with disabled correctly 1`] = `
"<div tabindex="-1" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" data-disabled="" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" disabled="" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" data-disabled="" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" disabled="" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" data-disabled="" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" disabled="" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with horizontal variant card correctly 1`] = `
"<div tabindex="0" data-orientation="horizontal" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-row gap-1">
    <!--v-if--><label class="flex items-center border border-(--ui-border-muted) rounded-lg flex-row text-sm p-3.5 has-data-[state=checked]:border-(--ui-primary)">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="horizontal" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring-inset focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4 ring-2 ring-(--ui-primary) bg-(--ui-primary)" id="v-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-reka-collection-item=""><span data-state="checked" style="pointer-events: none;" class="flex items-center justify-center size-full rounded-(--ui-radius) after:bg-(--ui-bg) after:size-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="shrink-0 size-full" width="1em" height="1em" viewBox="0 0 16 16"></svg></span>
          <!---->
        </button></div>
      <div class="ms-2 w-full me-2">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-center border border-(--ui-border-muted) rounded-lg flex-row text-sm p-3.5 has-data-[state=checked]:border-(--ui-primary)">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="horizontal" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full me-2">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-center border border-(--ui-border-muted) rounded-lg flex-row text-sm p-3.5 has-data-[state=checked]:border-(--ui-primary)">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="horizontal" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full me-2">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with horizontal variant list correctly 1`] = `
"<div tabindex="0" data-orientation="horizontal" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-row gap-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="horizontal" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring-inset focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4 ring-2 ring-(--ui-primary) bg-(--ui-primary)" id="v-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-reka-collection-item=""><span data-state="checked" style="pointer-events: none;" class="flex items-center justify-center size-full rounded-(--ui-radius) after:bg-(--ui-bg) after:size-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="shrink-0 size-full" width="1em" height="1em" viewBox="0 0 16 16"></svg></span>
          <!---->
        </button></div>
      <div class="ms-2 w-full me-2"><label for="v-0:1" class="block font-medium text-(--ui-text)">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="horizontal" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full me-2"><label for="v-0:2" class="block font-medium text-(--ui-text)">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="horizontal" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full me-2"><label for="v-0:3" class="block font-medium text-(--ui-text)">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with horizontal variant table correctly 1`] = `
"<div tabindex="0" data-orientation="horizontal" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-row gap-0 -space-x-px">
    <!--v-if--><label class="flex items-start border border-(--ui-border-muted) flex-row text-sm p-3.5 first-of-type:rounded-l-lg last-of-type:rounded-r-lg has-data-[state=checked]:bg-(--ui-primary)/10 has-data-[state=checked]:border-(--ui-primary)/50 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="horizontal" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring-inset focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4 ring-2 ring-(--ui-primary) bg-(--ui-primary)" id="v-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-reka-collection-item=""><span data-state="checked" style="pointer-events: none;" class="flex items-center justify-center size-full rounded-(--ui-radius) after:bg-(--ui-bg) after:size-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="shrink-0 size-full" width="1em" height="1em" viewBox="0 0 16 16"></svg></span>
          <!---->
        </button></div>
      <div class="ms-2 w-full me-2">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-(--ui-border-muted) flex-row text-sm p-3.5 first-of-type:rounded-l-lg last-of-type:rounded-r-lg has-data-[state=checked]:bg-(--ui-primary)/10 has-data-[state=checked]:border-(--ui-primary)/50 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="horizontal" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full me-2">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-(--ui-border-muted) flex-row text-sm p-3.5 first-of-type:rounded-l-lg last-of-type:rounded-r-lg has-data-[state=checked]:bg-(--ui-primary)/10 has-data-[state=checked]:border-(--ui-primary)/50 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="horizontal" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full me-2">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with indicator end correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row-reverse text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) ms-2 size-4" id="v-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row-reverse text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) ms-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row-reverse text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) ms-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with indicator hidden correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-start text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) sr-only size-4" id="v-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full text-center">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) sr-only size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full text-center">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) sr-only size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full text-center">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with indicator start correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with items correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with label slot correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with labelKey correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with legend slot correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with modelValue correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring-inset focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4 ring-2 ring-(--ui-primary) bg-(--ui-primary)" id="v-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-reka-collection-item=""><span data-state="checked" style="pointer-events: none;" class="flex items-center justify-center size-full rounded-(--ui-radius) after:bg-(--ui-bg) after:size-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="shrink-0 size-full" width="1em" height="1em" viewBox="0 0 16 16"></svg></span>
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with neutral variant card correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-center border border-(--ui-border-muted) rounded-lg flex-row text-sm p-3.5 has-data-[state=checked]:border-(--ui-border-elevated)">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring-inset focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-border-inverted) me-2 size-4 ring-2 ring-(--ui-border-inverted) bg-(--ui-bg-inverted)" id="v-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-reka-collection-item=""><span data-state="checked" style="pointer-events: none;" class="flex items-center justify-center size-full rounded-(--ui-radius) after:bg-(--ui-bg) after:size-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="shrink-0 size-full" width="1em" height="1em" viewBox="0 0 16 16"></svg></span>
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-center border border-(--ui-border-muted) rounded-lg flex-row text-sm p-3.5 has-data-[state=checked]:border-(--ui-border-elevated)">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-border-inverted) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-center border border-(--ui-border-muted) rounded-lg flex-row text-sm p-3.5 has-data-[state=checked]:border-(--ui-border-elevated)">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-border-inverted) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with neutral variant list correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring-inset focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-border-inverted) me-2 size-4 ring-2 ring-(--ui-border-inverted) bg-(--ui-bg-inverted)" id="v-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-reka-collection-item=""><span data-state="checked" style="pointer-events: none;" class="flex items-center justify-center size-full rounded-(--ui-radius) after:bg-(--ui-bg) after:size-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="shrink-0 size-full" width="1em" height="1em" viewBox="0 0 16 16"></svg></span>
          <!---->
        </button></div>
      <div class="ms-2 w-full"><label for="v-0:1" class="block font-medium text-(--ui-text)">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-border-inverted) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full"><label for="v-0:2" class="block font-medium text-(--ui-text)">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-border-inverted) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full"><label for="v-0:3" class="block font-medium text-(--ui-text)">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with neutral variant table correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-0 -space-y-px">
    <!--v-if--><label class="flex items-start border border-(--ui-border-muted) flex-row text-sm p-3.5 first-of-type:rounded-t-lg last-of-type:rounded-b-lg has-data-[state=checked]:bg-(--ui-bg-elevated) has-data-[state=checked]:border-(--ui-border-inverted)/25 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring-inset focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-border-inverted) me-2 size-4 ring-2 ring-(--ui-border-inverted) bg-(--ui-bg-inverted)" id="v-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-reka-collection-item=""><span data-state="checked" style="pointer-events: none;" class="flex items-center justify-center size-full rounded-(--ui-radius) after:bg-(--ui-bg) after:size-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="shrink-0 size-full" width="1em" height="1em" viewBox="0 0 16 16"></svg></span>
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-(--ui-border-muted) flex-row text-sm p-3.5 first-of-type:rounded-t-lg last-of-type:rounded-b-lg has-data-[state=checked]:bg-(--ui-bg-elevated) has-data-[state=checked]:border-(--ui-border-inverted)/25 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-border-inverted) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-(--ui-border-muted) flex-row text-sm p-3.5 first-of-type:rounded-t-lg last-of-type:rounded-b-lg has-data-[state=checked]:bg-(--ui-bg-elevated) has-data-[state=checked]:border-(--ui-border-inverted)/25 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-border-inverted) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with primary variant card correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-center border border-(--ui-border-muted) rounded-lg flex-row text-sm p-3.5 has-data-[state=checked]:border-(--ui-primary)">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring-inset focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4 ring-2 ring-(--ui-primary) bg-(--ui-primary)" id="v-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-reka-collection-item=""><span data-state="checked" style="pointer-events: none;" class="flex items-center justify-center size-full rounded-(--ui-radius) after:bg-(--ui-bg) after:size-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="shrink-0 size-full" width="1em" height="1em" viewBox="0 0 16 16"></svg></span>
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-center border border-(--ui-border-muted) rounded-lg flex-row text-sm p-3.5 has-data-[state=checked]:border-(--ui-primary)">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-center border border-(--ui-border-muted) rounded-lg flex-row text-sm p-3.5 has-data-[state=checked]:border-(--ui-primary)">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with primary variant list correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if-->
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring-inset focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4 ring-2 ring-(--ui-primary) bg-(--ui-primary)" id="v-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-reka-collection-item=""><span data-state="checked" style="pointer-events: none;" class="flex items-center justify-center size-full rounded-(--ui-radius) after:bg-(--ui-bg) after:size-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="shrink-0 size-full" width="1em" height="1em" viewBox="0 0 16 16"></svg></span>
          <!---->
        </button></div>
      <div class="ms-2 w-full"><label for="v-0:1" class="block font-medium text-(--ui-text)">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full"><label for="v-0:2" class="block font-medium text-(--ui-text)">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full"><label for="v-0:3" class="block font-medium text-(--ui-text)">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with primary variant table correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-0 -space-y-px">
    <!--v-if--><label class="flex items-start border border-(--ui-border-muted) flex-row text-sm p-3.5 first-of-type:rounded-t-lg last-of-type:rounded-b-lg has-data-[state=checked]:bg-(--ui-primary)/10 has-data-[state=checked]:border-(--ui-primary)/50 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring-inset focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4 ring-2 ring-(--ui-primary) bg-(--ui-primary)" id="v-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-reka-collection-item=""><span data-state="checked" style="pointer-events: none;" class="flex items-center justify-center size-full rounded-(--ui-radius) after:bg-(--ui-bg) after:size-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="shrink-0 size-full" width="1em" height="1em" viewBox="0 0 16 16"></svg></span>
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-(--ui-border-muted) flex-row text-sm p-3.5 first-of-type:rounded-t-lg last-of-type:rounded-b-lg has-data-[state=checked]:bg-(--ui-primary)/10 has-data-[state=checked]:border-(--ui-primary)/50 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start border border-(--ui-border-muted) flex-row text-sm p-3.5 first-of-type:rounded-t-lg last-of-type:rounded-b-lg has-data-[state=checked]:bg-(--ui-primary)/10 has-data-[state=checked]:border-(--ui-primary)/50 has-data-[state=checked]:z-[1]">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with required correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <legend class="mb-1 block font-medium text-(--ui-text) text-sm after:content-['*'] after:ms-0.5 after:text-(--ui-error)">Legend</legend><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with size lg correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4.5" id="v-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4.5" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4.5" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with size md correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with size sm correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-0.5">
    <!--v-if--><label class="flex items-start flex-row text-xs">
      <div class="flex items-center h-4"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-3.5" id="v-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-xs">
      <div class="flex items-center h-4"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-3.5" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-xs">
      <div class="flex items-center h-4"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-3.5" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with size xl correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1.5">
    <!--v-if--><label class="flex items-start flex-row text-base">
      <div class="flex items-center h-6"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-5" id="v-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-base">
      <div class="flex items-center h-6"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-5" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-base">
      <div class="flex items-center h-6"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-5" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with size xs correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-0.5">
    <!--v-if--><label class="flex items-start flex-row text-xs">
      <div class="flex items-center h-4"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-3" id="v-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-xs">
      <div class="flex items-center h-4"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-3" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-xs">
      <div class="flex items-center h-4"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-3" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with ui correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;

exports[`CheckboxGroup > renders with valueKey correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0" class="relative">
  <fieldset class="relative flex flex-col gap-1">
    <!--v-if--><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:Option 1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:Option 1">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:Option 2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:Option 2">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="flex items-start flex-row text-sm">
      <div class="flex items-center h-5"><button tabindex="-1" data-orientation="vertical" class="shrink-0 flex items-center justify-center rounded-(--ui-radius) text-(--ui-bg) ring ring-inset ring-(--ui-border-accented) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) me-2 size-4" id="v-0:Option 3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-reka-collection-item="">
          <!---->
          <!---->
        </button></div>
      <div class="ms-2 w-full">
        <p class="block font-medium text-(--ui-text)" for="v-0:Option 3">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!---->
</div>"
`;
